--- a/assets/css/anim.css
+++ b/assets/css/anim.css
@@ -19,3 +19,13 @@
 .translate-leave-to {
   transform: translateX(100%);
 }
+
+
+@keyframes rotating{
+  from{
+    transform: rotate(0deg)
+  }
+  to{
+    transform: rotate(360deg);
+  }
+}
