--- a/assets/css/anim.css
+++ b/assets/css/anim.css
@@ -1,11 +1,24 @@
 .fade-enter-active,
 .fade-leave-active {
-  transition: all 0.3s;
+  transition: all 0.5s;
 }
 .fade-enter-from,
 .fade-leave-to {
   opacity: 0;
-  transform: translateX(5%);
+}
+
+
+.fade-y-enter-active,
+.fade-y-leave-active {
+  transition: all 0.5s;
+}
+.fade-y-enter-from{
+  opacity: 0;
+  transform: translateY(-10rem);
+}
+.fade-y-leave-to {
+  opacity: 0;
+  transform: translateY(10rem);
 }
 
 
