--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: OpenSansRegular;
+    src: url('/assets/src/font/OpenSans-Regular.ttf');
+}
+
+
 *{
     box-sizing: border-box;
     margin: 0;
