--- a/assets/css/anim.css
+++ b/assets/css/anim.css
@@ -14,11 +14,25 @@
 }
 .fade-y-enter-from{
   opacity: 0;
-  transform: translateY(-10rem);
+  transform: translateY(-18%);
 }
 .fade-y-leave-to {
   opacity: 0;
-  transform: translateY(10rem);
+  transform: translateY(18%);
+}
+
+
+.fade-y-2-enter-active,
+.fade-y-2-leave-active {
+  transition: all 0.5s;
+}
+.fade-y-2-enter-from{
+  opacity: 0;
+  transform: translateY(-50%);
+}
+.fade-y-2-leave-to {
+  opacity: 0;
+  transform: translateY(50%);
 }
 
 
