--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,3 +29,16 @@ body{
 canvas{
     outline: none;
 }
+
+
+@media only screen and (max-width: 640px) {html{font-size: 11px;}}
+
+@media only screen and (min-width: 640px) {html{font-size: 12px;}}
+
+@media only screen and (min-width: 768px) {html{font-size: 13px;}}
+
+@media only screen and (min-width: 1024px) {html{font-size: 14px;}}
+
+@media only screen and (min-width: 1280px) {html{font-size: 14px;}}
+
+@media only screen and (min-width: 1536px) {html{font-size: 16px;}}
