--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,10 +2,10 @@
     font-family: OpenSansRegular;
     src: url('/assets/src/font/OpenSans-Regular.ttf');
 }
-/* @font-face {
+@font-face {
     font-family: NotoSansJPBold;
     src: url('/assets/src/font/NotoSansJP-Bold.ttf');
-} */
+}
 @font-face {
     font-family: NotoSansJPBlack;
     src: url('/assets/src/font/NotoSansJP-Black.ttf');
