--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -24,7 +24,7 @@ body{
     width: 100%;
     height: 100%;
     background: #14181b;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 canvas{
     outline: none;
