--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,6 +21,9 @@
     padding: 0;
 }
 body{
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background: #14181b;
